# beefyWallet-backend

./: ENVcopy  cmnds.txt  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
beefy_wallet_api/: admin.py  apps.py  models.py
beefy_wallet_api/api/: serializer.py  test.py  urls.py  views.py
beefy_wallet_api/migrations/: 0001_initial.py  0002_ads.py
core/: settings.py  urls.py
